# ledger-app-tezos-wallet

./: .clang-format  .gitignore  .gitlab-ci-build-docker.yml  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Makefile  README  README.md  dune-project  ledger_app.toml
tests/: Makefile  dune  gen_micheline.ml  micheline_cparse_stubs.c  requirements.txt  run_speculos.ml  test_micheline_c_parser.ml
tests/generate/: Makefile  apdu.ml  dune  gen_integration.ml  gen_micheline.ml  gen_operations.ml  gen_utils.ml  generate.ml
tests/integration/: .gitignore  .pylintrc  app_vars.sh  check_section_text.py  check_tlv_signature.py  err_codes.sh  run_test_docker.sh  run_test_local.sh  test_runtime.sh
tests/integration/nano/: conftest.py  regression_batched_ops.sh  regression_potential_empty_screen.sh  regression_press_right_works_across_apdu_recieves.sh  test_basic.py  test_basic.sh  test_blindsign.py  test_blindsign_basic.py  test_blindsign_basic.sh  test_blindsign_reject.py  test_blindsign_too_deep.py  test_blindsign_too_deep.sh  test_blindsign_too_large.py  test_blindsign_too_large.sh  test_change_sign_instruction.py  test_change_sign_instruction.sh  test_ensure_always_clearsign.py  test_get_pk.py  test_get_pk.sh  test_get_tz1_bip25519_pk.py  test_get_tz1_bip25519_pk.sh  test_get_tz1_ed25519_pk.py  test_get_tz2_pk.py  test_get_tz2_pk.sh  test_get_tz3_pk.py  test_get_tz3_pk.sh  test_git.py  test_git.sh  test_menu.py  test_mixing_command.py  test_mixing_command.sh  test_parsing_errors.py  test_parsing_errors.sh  test_provide_pk.py  test_provide_pk.sh  test_provide_tz1_bip25519_pk.py  test_provide_tz1_bip25519_pk.sh  test_provide_tz1_ed25519_pk.py  test_provide_tz1_ed25519_pk.sh  test_provide_tz2_pk.py  (+81 more)
tests/integration/nanos/: regression_batched_ops.sh  test_basic.sh  test_blindsign_basic.sh  test_blindsign_too_deep.sh  test_blindsign_too_large.sh  test_change_sign_instruction.sh  test_get_pk.sh  test_get_tz2_pk.sh  test_get_tz3_pk.sh  test_git.sh  test_mixing_command.sh  test_parsing_errors.sh  test_provide_pk.sh  test_provide_tz2_pk.sh  test_provide_tz3_pk.sh  test_regression_1.sh  test_regression_continue_after_reject.sh  test_reject_pk.sh  test_reject_transaction.sh  test_sign_ballot.sh  test_sign_delegation.sh  test_sign_failing_noop.sh  test_sign_increase_paid_storage.sh  test_too_deep.sh  (+27 more)
tests/unit/: Makefile  dune  generated_patterns.h  micheline_cparse_stubs.c  test_c_parser.ml  test_c_parser_utils.ml  test_micheline_c_parser.ml  test_operations_c_parser.ml
(+369 files in other folders)
