(executable
        (name test_c_parser)
        (modules test_c_parser_utils test_micheline_c_parser test_operations_c_parser test_c_parser)
        (libraries "tezos-protocol-016-PtMumbai"
                   "tezos-benchmarks-proto-016-PtMumbai"
                   "terminal_size")
        (foreign_stubs
                (language c)
                (names formatting parser_state num_parser micheline_parser operation_parser micheline_cparse_stubs)
                (flags :standard -std=gnu99 -Werror=int-to-pointer-cast -Wall -Wextra -Werror -Wmissing-field-initializers)))

(copy_files "../../app/src/parser/[!g]*.[ch]")
